     use the GI bindings, this dependency and pygobject-2 will be dropped.
   * debian/control.in: Update package descriptions to point out that this is
     now GI only.
   * debian/control.in, debian/rules: Drop python-gobject-dev package. It's
     not relevant any more for this version, and now built from the
     pygobject-2 source package.

 -- Martin Pitt <mpitt@debian.org>  Wed, 17 Aug 2011 09:53:22 +0200

pygobject (2.28.6-4) unstable; urgency=low

  * debian/rules: Create shlibs for python3 packages, too.
  * debian/rules: Call dh_strip on python3-gobject, too.

 -- Martin Pitt <mpitt@debian.org>  Thu, 14 Jul 2011 12:04:44 +0200

pygobject (2.28.6-3) unstable; urgency=low

  * Cherrypick some fixes from pygobject-2-28 upstream branch:
    - 00git_test_case_hang.patch: Fix hang in test suite when
      TestGDBusClient.test_native_calls_async() test case fails.
    - 00git_messagebox_type.patch: Fix MessageBox so it correctly handles
      the type constructor param.
    - 00git_python3_build.patch, 00git_python3-maketrans.patch: Python 3 fixes.
    - 00git_gio_test.patch: Port test_properties from static gio to GI Gio, so
      that the tests will also work with Python 3.
  * debian/control.in, debian/rules: Add and build python3-gobject and
    python3-gobject-dbg packages. Until we get py3cairo packaged in Debian (in
    the works), we need to build the python3 flavour with --disable-cairo, and
    apply some workarounds in debian/rules (see the "FIXME"s); these will
    disappear again with py3cairo.

 -- Martin Pitt <mpitt@debian.org>  Thu, 14 Jul 2011 11:17:05 +0200

pygobject (2.28.6-2) unstable; urgency=low

  * Cherrypick some fixes from pygobject-2-28 upstream branch:
    - Add 00git_enum_properties.patch: Add support for enums in
      gobject.property
    - Add 00git_cairo_init.patch: Correctly initialize the _gi_cairo_functions
      array to be zero filled
    - 00git_textiter_crash.patch: Fix crash in Gtk.TextIter overrides
